crates/mys/tests/snapshots/shell_tests__new_tests__new_then_build.sh.snap
---
source: crates/mys/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Copyright (c) The Social Proof Foundation, LLC.
# SPDX-License-Identifier: Apache-2.0

# tests that mys move new followed by mys move build succeeds

mys move new example

# we mangle the generated toml file to replace the framework dependency with a local dependency
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/mys##g')
cat example/Move.toml \
  | sed 's#\(MySocial = .*\)git = "[^"]*", \(.*\)#\1\2#' \
  | sed 's#\(MySocial = .*\), rev = "[^"]*"\(.*\)#\1\2#' \
  | sed 's#\(MySocial = .*\)subdir = "\([^"]*\)"\(.*\)#\1local = "FRAMEWORK/\2"\3#' \
  | sed "s#\(MySocial = .*\)FRAMEWORK\(.*\)#\1$FRAMEWORK_DIR\2#" \
  > Move.toml
mv Move.toml example/Move.toml

cd example && mys move build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY Mys
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
